@@ -1,6 +1,7 @@
 2004-01-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* game.*: added Game::has_expansion() to check for FoV/SS
 	* objnames.cc: fixed SI-without-SS object names
+	* files/utils.cc: made U7remove case-insensitive
 
 2004-01-17  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* gamewin.cc: fix check for original gamedat
